typescript/checker/tests/conformance/expressions/unaryOperators/negateOperator/negateOperatorWithNumberType.ts.stderr
error: UselessSeqExpr {
    span: Span {
        lo: BytePos(
            786,
        ),
        hi: BytePos(
            798,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/unaryOperators/negateOperator/negateOperatorWithNumberType.ts:41:1
   |
41 | -objA.a, M.n;
   | ^^^^^^^^^^^^

